--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Outfit', sans-serif;
-  background: url('bg.jpeg') no-repeat center center fixed;
+  background: url('Images/bg.jpeg') no-repeat center center fixed;
   background-size: cover;
   height: 100vh;
   display: flex;
